--- a/h1.md
+++ b/h1.md
@@ -6,6 +6,11 @@ Latasin Kalin nettisivuilta uusimman version(kali-linux-2025-1a) ja asensin Virt
 
 ![image](https://github.com/user-attachments/assets/02a37511-2b5b-47e5-940d-74c8e7393752)
 
+![image](https://github.com/user-attachments/assets/f2e14c3c-59f3-402d-97f7-7fdb579eaefc)
+
+![image](https://github.com/user-attachments/assets/a293d4f3-4977-4cf5-a7d6-a5713d70f31a)
+
+
 
 Lähteet.
 
