--- a/h1.md
+++ b/h1.md
@@ -10,7 +10,25 @@ Latasin Kalin nettisivuilta uusimman version(kali-linux-2025-1a) ja asensin Virt
 
 ![image](https://github.com/user-attachments/assets/a293d4f3-4977-4cf5-a7d6-a5713d70f31a)
 
+c) Porttiskannaa 1000 tavallisinta tcp-porttia omasta koneestasi (nmap -T4 -A localhost). Selitä komennon paramterit. Analysoi ja selitä tulokset.
 
+Avain nmapin manuaalin komennolla: `man nmap` ja sieltä heti ekalta sivulta löytyi komennon parametrit:
+
+![image](https://github.com/user-attachments/assets/65dd0042-348c-433d-9a78-3985de0fa9e1) (NMAP(1) Linux manual, page 1 lines 1-4)
+
+Elikkä T4 on traceroute 4, joka tekee nopeamman skannauksen ja parametri A määrittää käyttöjärjestelmän ja version löytämisen, viimisenä skannauksen kohde eli tässä tapauksessa paikallisverkko. 
+
+![image](https://github.com/user-attachments/assets/cec4f029-1177-44b7-b916-4bf2aa191ebf)
+
+
+d) Asenna kaksi vapaavalintaista demonia ja skannaa uudelleen. Analysoi ja selitä erot.
+e) Asenna Metasploitable 2 virtuaalikoneeseen
+f) Tee koneiden välille virtuaaliverkko. Jos säätelet VirtualBoxista
+Kali saa yhteyden Internettiin, mutta sen voi laittaa pois päältä
+Kalin ja Metasploitablen välillä on host-only network, niin että porttiskannatessa ym. koneet on eristetty intenetistä, mutta ne saavat yhteyden toisiinsa
+Vaihtoehtoisesti voit tehdä molempien koneiden asennuksen ja virtuaaliverkon vagrantilla. Silloin molemmat koneet samaan Vagrantfile:n.
+g) Etsi Metasploitable porttiskannaamalla (nmap -sn). Tarkista selaimella, että löysit oikean IP:n - Metasploitablen weppipalvelimen etusivulla lukee Metasploitable.
+h) Porttiskannaa Metasploitable huolellisesti ja kaikki portit (nmap -A -T4 -p-). Poimi 2-3 hyökkääjälle kiinnostavinta porttia. Analysoi ja selitä tulokset näiden porttien osalta.
 
 Lähteet.
 
