--- a/h1.md
+++ b/h1.md
@@ -33,6 +33,9 @@ systemctl start ssh
 
 
 e) Asenna Metasploitable 2 virtuaalikoneeseen
+
+![image](https://github.com/user-attachments/assets/844a7da5-4d66-454e-b7b3-657a17869eae)
+
 f) Tee koneiden välille virtuaaliverkko. Jos säätelet VirtualBoxista
 Kali saa yhteyden Internettiin, mutta sen voi laittaa pois päältä
 Kalin ja Metasploitablen välillä on host-only network, niin että porttiskannatessa ym. koneet on eristetty intenetistä, mutta ne saavat yhteyden toisiinsa
