--- a/h1.md
+++ b/h1.md
@@ -1,3 +1,15 @@
+x) Lue/katso/kuuntele ja tiivistä. 
+
+**[Tiedossa avaruusmyrskyjä, vieraana Minna Palmroth | 0x1c](https://hakkerit.libsyn.com/tiedossa-avaruusmyrskyj-0x22)**
+
+Alussa oli puhetta EU:n digitaalisen identiteettilompakko eli eIDAS hankkeesta. Jakso oli tullut vuonna 2022, joten silloin asiasta vasta kerrottiin julkisuuteen, mutta luin aiheeseen liittyvän [uutisen Yleltä](https://yle.fi/a/74-20151765), juuri hetki sitten, ja hauska siis todeta että sama hanke on kyllä edelleen menossa ja nyt EU on päässyt sopuun digitaalisen ajokortin spekseistä!
+
+Valitsin tämän vanhemman jakson aiheen takia, koska revontulia, jotka johtuvat aurinkomyrskyistä, on tullut katseltua. Jakson vieraana oli siis avaruusfysiikan professori Minna Palmroth. Kiinnostavia nostoja etenkin kiertoradoilla olevasta vaarallisesta avaruusromusta, historian suurimmasta avaruusmyrkystä Carringtonista, avaruusmyrskyjen vaikutuksista sähköverkkoon sekä tietenkin kurssin aiheeseen liittyen satelliittien hakkeroinnista ja näin ollen vakoilusateliittejien kuvien manipuloinnista. 
+
+Suosittelen kaikille kuuntelua, mielestäni Minna vaikutti oikein hauskalta tyypiltä!
+
+**https://lockheedmartin.com/content/dam/lockheed-martin/rms/documents/cyber/LM-White-Paper-Intel-Driven-Defense.pdf**
+
 
 
 a) Asenna Kali virtuaalikoneeseen.
