--- a/h1.md
+++ b/h1.md
@@ -8,7 +8,9 @@ Valitsin tämän vanhemman jakson aiheen takia, koska revontulia, jotka johtuvat
 
 Suosittelen kaikille kuuntelua, mielestäni Minna vaikutti oikein hauskalta tyypiltä!
 
-**https://lockheedmartin.com/content/dam/lockheed-martin/rms/documents/cyber/LM-White-Paper-Intel-Driven-Defense.pdf**
+**[Hutchins et al 2011: Intelligence-Driven Computer Network Defense Informed by Analysis of Adversary Campaigns and Intrusion Kill Chains, chapters Abstract, 3.2 Intrusion Kill Chain-](https://lockheedmartin.com/content/dam/lockheed-martin/rms/documents/cyber/LM-White-Paper-Intel-Driven-Defense.pdf)**
+
+
 
 
 
